# RMD-TRA

./: Dockerfile  README.md  deploy.bat  deploy.sh  diagnose.ps1  ganti-kontributor.txt  pyproject.toml  setup-local.ps1
app/: __init__.py  agent.py  config.py  fast_api_app.py  multi_agent.py  policy_server.py  stats_tools.py
app/pillar5/: __init__.py  agents.py  finance_tools.py  survey_tools.py  word_exporter.py  word_exporter.py.bak-2026-07-02
policies/: policies.yaml
specs/: rmd_tra.feature
static/: index.html
tests/: test_extraction.py  test_finance_tools.py  test_word_exporter.py
tests/eval/datasets/: rmd-tra-evalset.json
