[project]
name = "rmd-tra"
version = "1.0.0"
description = "RMD-TRA: Research Management & Development — Transportation Research Assistant"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Rudy Max", email = "rudyart.arin@gmail.com" },
    { name = "Emilio Fakhry", email = "fakhryemilio2@gmail.com" },
]

dependencies = [
    "google-adk>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "google-cloud-aiplatform>=1.60.0",
    "google-generativeai>=0.8.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.7.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "litellm>=1.55.0",
    "latex2mathml>=3.77.0",
    "pywin32>=312",
    "pymupdf>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
